--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -13,15 +13,6 @@
   color: $colour-primary;
 
 
-  /*   & .circle{
-    border: 16px solid #f3f3f3; 
-    border-top: 16px solid #3498db; 
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-  } */
-
   & .center {
     display: flex;
     flex-direction: row;
@@ -103,11 +94,12 @@
   50% {
     opacity: 0;
     transform: scaleX(1); 
+    animation-timing-function: cubic-bezier(.9,0,.1,1);
 
   }
 
   70% {
-    animation-timing-function: cubic-bezier(.25, 0.25, 1);
+    animation-timing-function: cubic-bezier(.25,0.25,1);
     opacity: 0.9;
   }
 
@@ -128,7 +120,7 @@
   }
 
   70% {
-    animation-timing-function: cubic-bezier(.25, 0.25, 1);
+    animation-timing-function: cubic-bezier(.32,0,.07,1);
     opacity: 0.9;
   }
 
