--- a/sass/composants/_animation.scss
+++ b/sass/composants/_animation.scss
@@ -1,6 +1,7 @@
 @keyframes coeurdegrade {
 	0% {
 		background: linear-gradient(180deg, $colour-primary, $colour-secondary);
+		background-clip: text;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		opacity: 0.1;
