--- a/public/css/style.css
+++ b/public/css/style.css
@@ -249,12 +249,14 @@ button {
 @keyframes coeurdegrade {
   0% {
     background: linear-gradient(180deg, #9356DC, #FF79DA);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: 0.1;
   }
   100% {
     background: linear-gradient(180deg, #9356DC, #FF79DA);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -289,14 +291,6 @@ button {
   cursor: wait;
   animation: fade-out 2000ms both;
   color: #9356DC;
-  /*   & .circle{
-    border: 16px solid #f3f3f3; 
-    border-top: 16px solid #3498db; 
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
-  } */
 }
 #loader-container .center {
   display: flex;
@@ -359,9 +353,10 @@ button {
   50% {
     opacity: 0;
     transform: scaleX(1);
+    animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
   }
   70% {
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
+    animation-timing-function: cubic-bezier(0.25, 1, 0.25, 1);
     opacity: 0.9;
   }
   100% {
@@ -377,7 +372,7 @@ button {
     opacity: 1;
   }
   70% {
-    animation-timing-function: cubic-bezier(0.25, 0.25, 1);
+    animation-timing-function: cubic-bezier(0.32, 0, 0.07, 1);
     opacity: 0.9;
   }
   100% {
