--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -60,10 +60,16 @@
         padding: 2*$layout_margin;
         background-color: $colour-lightgray;
 
-        @include media(desktop-only, tablet-only) {
-            width: 400px;
-            padding: 0px;
+        @include media(desktop-only) {
+          width: 32%;
+          padding: 0px;
+            
         }
+        @include media( tablet-only) {
+            width: 48%;
+           padding: 0px;
+              
+          }
 
         &--titre {
             margin-bottom: 3*$layout_margin;
@@ -146,10 +152,10 @@
                     padding: 1.2*$layout_margin;
                         }
                         }
-            /*animation bouton check */            
-            &:hover {
-                @include shadow-strong;
-
+            /*animation bouton check */ 
+            
+            &:active{
+                
                 & .menu__description--bloc_plat--check_status {
                     transform: translateX(0%);
                     transition: 0.5s ease;
@@ -159,8 +165,26 @@
                 }
                & .info{
                    padding-right: 4*$layout_margin;
-               }
+               }  
+            }         
+            &:hover {
+                @include shadow-strong;
 
+            }
+            @include media(desktop-only, tablet-only) {
+                &:hover {
+                    & .menu__description--bloc_plat--check_status {
+                        transform: translateX(0%);
+                        transition: 0.5s ease;
+                        & i{
+                            animation: rotation 700ms ;
+                        }
+                    }
+                   & .info{
+                       padding-right: 4*$layout_margin;
+                   }
+    
+                }
             }
         }
         /*fondu enchainé et mvt décalé de chaque bloc*/
