--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,9 @@
 @import "./composants/card";
 @import "./composants/animation";
 @import "./composants/loader";
+@import "./composants/form";
 
 @import "./layout/header";
-@import "./layout/form";
 @import "./layout/footer";
 
 @import "./pages/accueil";
