--- a/sass/composants/_animation.scss
+++ b/sass/composants/_animation.scss
@@ -19,12 +19,21 @@
 
 @keyframes bloc_menu {
 	0% {
-		transform: translateY(30px);
+		transform: translateY(15px);
 		opacity: 0;
 	}
-
+	50% {
+		
+		opacity: 0.7;
+	}
+	
+	80% {
+		transform: translateY(0px);
+		opacity: 0.9;
+	}
 	100% {
-		transform: translateY(0px)
+		transform: translateY(0px);
+		opacity: 1;
 	}
 }
 
