--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -98,8 +98,9 @@
             background-color: $colour-white;
             border-radius: 20px;
             margin-bottom: $layout_margin;
-            
-            animation: bloc_menu 3000ms forwards;
+            animation: proggressiveAppearance 1.5s forwards;
+            opacity: 0;
+            /* animation: bloc_menu 3000ms forwards; */
             @include shadow;
 
             & .info {
@@ -190,19 +191,19 @@
         }
         /*fondu enchainé et mvt décalé de chaque bloc*/
         &--bloc_plat:nth-child(2) {
-            animation-delay: 0.10s;
+            animation-delay: 0.3s;
         }
 
         &--bloc_plat:nth-child(3) {
-            animation-delay: 0.15s;
+            animation-delay: 0.6s;
         }
 
         &--bloc_plat:nth-child(4) {
-            animation-delay: 0.2s;
+            animation-delay: 0.9s;
         }
 
         &--bloc_plat:nth-child(5) {
-            animation-delay: 0.25s;
+            animation-delay: 1.2s;
         }
     }
 }
