--- a/sass/composants/_animation.scss
+++ b/sass/composants/_animation.scss
@@ -1,7 +1,6 @@
 @keyframes coeurdegrade {
 	0% {
 		background: linear-gradient(180deg, $colour-primary, $colour-secondary);
-		background-clip: text;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
 		opacity: 0.1;
@@ -9,9 +8,9 @@
 
 	100% {
 		background: linear-gradient(180deg, $colour-primary, $colour-secondary);
-		background-clip: text;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
+		opacity: 1;
 
 	}
 
@@ -28,10 +27,6 @@
         transform: translateY(0);
 	}
 }
-
-
-
-
 
 @keyframes rotation {
 	0% {
