--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -7,11 +7,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: opacity 1s ease-in-out;
+  /* transition: opacity 1s ease-in-out; */
   cursor: wait;
   animation: fade-out 2000ms both;
   color: $colour-primary;
-
 
   & .center {
     display: flex;
@@ -66,7 +65,7 @@
   }
 
 }
-
+/*animation loader*/
 @keyframes wave {
   0% {
     transform: scale(0);
@@ -81,30 +80,32 @@
   }
 }
 
+#container {
+  transform: scaleX(0);
+  animation: fade-in 3000ms 150ms forwards;
 
-
+}
 
 
 @keyframes fade-in {
   0% {
     opacity: 0;
- /*  transform: scaleX(0);  */
   }
 
   50% {
     opacity: 0;
-    transform: scaleX(1); 
-    animation-timing-function: cubic-bezier(.9,0,.1,1);
+    transform: scaleX(1);
+    animation-timing-function: cubic-bezier(.9, 0, .1, 1);
 
   }
 
   70% {
-    animation-timing-function: cubic-bezier(.25,1,0.25,1);
+    animation-timing-function: cubic-bezier(.25, 1, 0.25, 1);
     opacity: 0.9;
   }
 
   100% {
-    transform: scaleX(1); 
+    transform: scaleX(1);
     opacity: 1;
   }
 }
@@ -120,7 +121,7 @@
   }
 
   70% {
-    animation-timing-function: cubic-bezier(.32,0,.07,1);
+    animation-timing-function: cubic-bezier(.32, 0, .07, 1);
     opacity: 0.9;
   }
 
@@ -128,11 +129,5 @@
 
     opacity: 0;
   }
-}
-
-#container {
-  transform: scaleX(0);
-  animation: fade-in 3000ms 150ms forwards;
-
 }
 
