--- a/sass/composants/_loader.scss
+++ b/sass/composants/_loader.scss
@@ -1,13 +1,12 @@
 #loader-container {
   position: absolute;
   background-color: $colour-white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* transition: opacity 1s ease-in-out; */
   cursor: wait;
   animation: fade-out 2000ms both;
   color: $colour-primary;
