--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', 'Arial', sans-serif;
+    font-family: "Roboto", 'Arial', sans-serif;
     color: $colour-black;
 }
 h1 {
@@ -8,9 +8,9 @@ h1 {
     font-size: x-large; 
 }
 h2 {
-    font-family: 'Shrikhand',Arial, Helvetica, sans-serif;
-    font-weight: 600;
-    font-size: large; 
+    font-family: 'Arial', sans-serif;
+    font-size:x-large; 
+    font-weight: 900;
     margin-bottom: $layout_margin;
     @include media(desktop-only) {
     margin-bottom: 2*$layout_margin;
@@ -27,7 +27,7 @@ footer h2 {
     color: white;
 }
 footer li a {
-    font-family: 'Roboto', 'Arial', sans-serif;
+   
     font-weight: 600;
     font-size: large; 
     color: white;
